Added some media query to homepage, added fonts file, and created product and contact page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         </div>  
         
         <div id="welcome_box">
-            <p id="in_line">WELCOME TO <br><span id="welcome_line_2">Sneaker Haven</span></p>
+            <p id="welcome_paragraph">WELCOME TO</p>
+            <p id="welcome_paragraph_line_2">Sneaker Haven</p>
             <hr id="line_1">
             <p id="kickin">kickin' it</p>
         </div>
