--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,31 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Page</title>
+    <link rel="stylesheet" href="../Css/contact.css">
 </head>
 <body>
     <header>
-        <p>Sneaker</p>
-        <p>Haven</p>
+        <div id="left_header">
+            <p id="sneaker_haven">Sneaker  <br><span id="sneaker_left_haven">Haven</span></p>
+        </div>
         <nav id="nav_for_header">
-            <p id="contacts">Contact</p>
-            <a href="./products.html" id="products">Products</a>
-            <a href="../index.html" id="homepage">Homepage</a>
+            <span id="link_1"><p id="contacts">Contact</p></span>
+            <span id="link_2"><a href="products.html" id="products">Products</a></span>
+            <span id="link_3"><a id="homepage" href="/index.html">Homepage</a></span>
         </nav>
     </header>
 
     <div id="contact_container">
-        <div id="contact_background">
-            <p>Contact</p>
-        </div>
+        <span><p  id="contact_title">Contact</p></span>
     </div>
 
     <div id="page_container">
         <div class="team_background">
             <div id="text">
                 <h1>Speak to our team:</h1>
-                <p>Our dedicated team is here to make your experience seamless and successful. Whether you need assistance navigating the site, support with technical issues, or advice on how to get the most out of our services, we're ready to help.</p>
-                <div class="button">
-                    <button type="button">CLICK HERE TO BEGIN CONVERSING WITH OUR TEAM</button>
+                <p id="paragraph_1">Our dedicated team is here to make your experience seamless and successful. <br> Whether you need assistance navigating the site, <br> support with technical issues, or advice on <br> how to get the most out of our services, <br> we're ready to help.</p>
+                <div>
+                    <button type="button" id="button">CLICK HERE TO BEGIN CONVERSING WITH OUR TEAM</button>
                 </div>
             </div>
         </div>
@@ -36,9 +36,9 @@
         <div class="team_background">
             <div id="text_2">
                 <h1>Speak to our sales management team:</h1>
-                <p>Our Sales Management team is dedicated to helping you find the perfect solutions for your needs. Whether you're looking to explore our products or services, need guidance on pricing options, or are interested in custom packages, our team is here to assist you every step of the way.</p>
-                <div class="button">
-                    <button type="button">CLICK HERE TO BEGIN CONVERSING WITH OUR SALES MANAGEMENT TEAM</button>
+                <p id="paragraph_2">Our Sales Management team is dedicated to helping you find the perfect solutions for your needs. <br> Whether you're looking to explore our products or services, <br> need guidance on pricing options, or are interested in custom packages, <br> our team is here to assist you every step of the way.</p>
+                <div>
+                    <button type="button" id="button_2">CLICK HERE TO BEGIN CONVERSING WITH OUR SALES MANAGEMENT TEAM</button>
                 </div>
             </div>
         </div>
