Adding responsive images and reworking the html and css.

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,14 +19,17 @@
     </header>
 
     <div id="contact_container">
-        <span><p  id="contact_title">Contact</p></span>
+        <div id="contact_text">
+            <span><p  id="contact_title">Contact</p></span>
+        </div>
     </div>
 
     <div id="page_container">
         <div class="team_background">
             <div id="text">
+                <img src="/images/SG_pattern.webp" alt="Green and white swirly pattern on the top of speak to our team text.">
                 <h1>Speak to our team:</h1>
-                <p id="paragraph_1">Our dedicated team is here to make your experience seamless and successful. <br> Whether you need assistance navigating the site, <br> support with technical issues, or advice on <br> how to get the most out of our services, <br> we're ready to help.</p>
+                <p id="paragraph_1">Our dedicated team is here to make your experience seamless and successful. Whether you need assistance navigating the site, support with technical issues, or advice on how to get the most out of our services, we're ready to help.
                 <div>
                     <button type="button" id="button">CLICK HERE TO BEGIN CONVERSING WITH OUR TEAM</button>
                 </div>
@@ -35,8 +38,9 @@
 
         <div class="team_background">
             <div id="text_2">
+                <img src="/images/SG_pattern_2.webp" alt="Green and white swirly pattern on top of speak to our sales mangagement team">
                 <h1>Speak to our sales management team:</h1>
-                <p id="paragraph_2">Our Sales Management team is dedicated to helping you find the perfect solutions for your needs. <br> Whether you're looking to explore our products or services, <br> need guidance on pricing options, or are interested in custom packages, <br> our team is here to assist you every step of the way.</p>
+                <p id="paragraph_2">Our Sales Management team is dedicated to helping you find the perfect solutions for your needs. Whether you're looking to explore our products or services, need guidance on pricing options, or are interested in custom packages, our team is here to assist you every step of the way.</p>
                 <div>
                     <button type="button" id="button_2">CLICK HERE TO BEGIN CONVERSING WITH OUR SALES MANAGEMENT TEAM</button>
                 </div>
