Added media queries to my nav bar, and worked on minor issues within the html and css

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,9 +12,9 @@
             <p id="sneaker_haven">Sneaker  <br><span id="sneaker_left_haven">Haven</span></p>
         </div>
         <nav id="nav_for_header">
-            <span id="link_1"><p id="contacts">Contact</p></span>
-            <span id="link_2"><a href="products.html" id="products">Products</a></span>
-            <span id="link_3"><a id="homepage" href="/index.html">Homepage</a></span>
+            <p id="contacts">Contact</p>
+            <a href="products.html" id="products">Products</a>
+            <a id="homepage" href="/index.html">Homepage</a>
         </nav>
     </header>
 
