--- a/pages/products.html
+++ b/pages/products.html
@@ -12,9 +12,9 @@
             <p id="sneaker_haven">Sneaker  <br><span id="sneaker_left_haven">Haven</span></p>
         </div>
         <nav id="nav_for_header">
-            <span id="link_1"><a href="contact.html" id="contacts">Contact</a></span>
-            <span id="link_2"><p" id="products">Products</p></span>
-            <span id="link_3"><a id="homepage" href="/index.html">Homepage</a></span>
+            <a href="contact.html" id="contacts">Contact</a>
+            <p" id="products">Products</p></span>
+            <a id="homepage" href="/index.html">Homepage</a>
         </nav>
     </header>
     <div id="products_container">    
