--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <p id="sneaker_haven">Sneaker  <br><span id="sneaker_left_haven">Haven</span></p>
         </div>
         <nav id="nav_for_header">
-            <span id="link_1"><a href="pages/contact.html" id="contacts">Contact</a></span>
-            <span id="link_2"><a href="pages/products.html" id="products">Products</a></span>
-            <span id="link_3"><p id="homepage">Homepage</p></span>
+            <a href="pages/contact.html" id="contacts">Contact</a>
+            <a href="pages/products.html" id="products">Products</a>
+            <p id="homepage">Homepage</p>
         </nav>
     </header>
 
